--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -169,39 +169,46 @@ a|image::contributor-johnmcdonnell.png[] a| * apache id: johnmcdonnell
 * Maven, Java EE, Docker  
 |===
 
-=== Junichi Yamamoto 
-Committer, PMC Member
+[width="70%"]
+|=== 
+a|=== Junichi Yamamoto| 
+a|image::contributor-junichi11.png[] a| * apache id: junichi11
+* Fukuoka, Japan
+* PHP
+|===
 
-  - apache id: junichi11 
-  - Fukuoka, Japan 
-  - PHP 
-  -  http://junichi11.com/ http://twitter.com/@junichi_11 
+[width="70%"]
+|=== 
+a|=== Ken Fogel| 
+a|image::contributor-kfogel.png[] a| * apache id: kfogel
+* Dawson College
+* Montreal, Quebec, Canada
+|===
 
-=== Ken Fogel
-  - Dawson College, Montreal, Quebec, Canada 
-  - Java, JavaFX, JavaServer Faces, Education 
-  -  https://www.omnijava.com https://www.dawsoncollege.qc.ca/computer-science-technology/ http://twitter.com/@omniprof 
+[width="70%"]
+|=== 
+a|=== Laszlo Kishalmi| 
+a|image::contributor-lkishalmi.png[] a| * apache id: lkishalmi
+* Dawson College
+* Montreal, Quebec, Canada
+|===
 
-=== Laszlo Kishalmi 
-Committer, PMC Member
+[width="70%"]
+|=== 
+a|=== Leonardo Zanivan| 
+a|image::contributor-panga.png[] a| * apache id: panga
+* Aurea Software
+* Criciúma, Brazil 
+* Montreal, Quebec, Canada
+|===
 
-  - apache id: lkishalmi 
-
-=== Leonardo Zanivan 
-Committer, PMC Member
-
-  - apache id: panga 
-  - Aurea Software, Criciúma, Brazil 
-  - Java editor, JavaScript, Plugins 
-  - http://twitter.com/@leonardopanga 
-
-=== Mark Stephens 
-Committer, PMC Member
-
-  - apache id: markee174 
-  - IDRsolutions, Tonbridge, Kent, UK 
-  - Platform, API Support, JavaFX, HTML5 
-  -  NetBeans articles on IDR blog 
+[width="70%"]
+|=== 
+a|=== Mark Stephens| 
+a|image::contributor-markee174.png[] a| * apache id: markee174
+* IDRsolutions
+* Tonbridge, Kent, UK
+|===
 
 === Martin Klähn 
 Committer, PMC Member
