--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -210,43 +210,44 @@ a|image::contributor-markee174.png[] a| * apache id: markee174
 * Tonbridge, Kent, UK
 |===
 
-=== Martin Klähn 
-Committer, PMC Member
+[width="70%"]
+|=== 
+a|=== Martin Klähn| 
+a|image::contributor-mklaehn.png[] a| * apache id: mklaehn
+* Airbus Defence and Space
+* Bodensee, Germany
+|===
 
-  - apache id: mklaehn 
-  - Airbus Defence and Space, Bodensee, Germany 
-  - Platform, JavaFX, JavaEE, Groovy, Gradle 
+[width="70%"]
+|=== 
+a|=== Martin Klähn| 
+a|image::contributor-muellermi.png[] a| * apache id: muellermi
+* Germany
+|===
 
-=== Michael Müller 
-Committer, PMC Member
+[width="70%"]
+|=== 
+a|=== Matthias Bläsing| 
+a|image::contributor-matthiasblaesing.png[] a| * apache id: matthiasblaesing
+* Germany
+|===
 
-  - apache id: muellermi 
-  - Germany 
-  - Java EE, Evangelize 
-  -  Michael's Blog Michael Müller 
-
-=== Matthias Bläsing 
-Committer, PMC Member
-
-  - apache id: matthiasblaesing 
-  - Germany 
-  - Database, XML 
-
-=== Neil C Smith 
-Committer, PMC Member
-
-  - apache id: neilcsmith 
-  - Praxis LIVE, Oxford, UK 
-  - Platform, API Support, Java editor/support 
-  -  NetBeans articles in Praxis LIVE blog 
-
-=== Sven Reimers 
-Committer, PMC Member
-
-  - apache id: sreimers 
-  - Airbus Defence and Space, Bodensee, Germany 
-  - Platform, JavaFX, JavaEE, Groovy, Gradle, XML 
-
+[width="70%"]
+|=== 
+a|=== Neil C Smith| 
+a|image::contributor-neilcsmith.png[] a| * apache id: neilcsmith
+* Praxis LIVE
+* Oxford, UK 
+|===
+ 
+[width="70%"]
+|=== 
+a|=== Sven Reimers | 
+a|image::contributor-sreimers.png[] a| * apache id: sreimers
+* Airbus Defence and Space
+* Bodensee, Germany
+|===
+ 
 === Thilina Ranathunga
   - Nano Creations, Ekala, Sri Lanka 
   - RCP, API, EE, Spring, Angular, TypeScript 
