--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -220,7 +220,7 @@ a|image::contributor-mklaehn.png[] a| * apache id: mklaehn
 
 [width="70%"]
 |=== 
-a|=== Martin Klähn| 
+a|=== Michael Müller| 
 a|image::contributor-muellermi.png[] a| * apache id: muellermi
 * Germany
 |===
