Corrected Laszlo's Info

--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -189,8 +189,9 @@ a|image::contributor-kfogel.png[] a| * apache id: kfogel
 |=== 
 a|=== Laszlo Kishalmi| 
 a|image::contributor-lkishalmi.png[] a| * apache id: lkishalmi
-* Dawson College
-* Montreal, Quebec, Canada
+* EPAM Systems Inc.
+* Portland, Oregon, USA
+* Gradle, Snap
 |===
 
 [width="70%"]
