--- a/netbeans.apache.org/src/content/download/nb112/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb112/index.asciidoc
@@ -105,11 +105,22 @@ The highlights of the enhancements and fixes are listed below.
 
 === Enhancements
 
+==== Performance
+
+- Speed up finding binaries for source files, most notable performance increase on refactoring. (link:https://github.com/apache/netbeans/pull/1430[PR-1430])
+- Using Java NIO2 Watchers on Windows and Linux (link:https://github.com/apache/netbeans/pull/1349[PR-1349])
+- Optimized the archive file detection (link:https://github.com/apache/netbeans/pull/1422[PR-1422])
+
+==== Gradle
+
+- The Gradle Plugin now can read the compiler arguments, enabling the IDE support for Java preview features on Gradle projects as well. (link:https://github.com/apache/netbeans/pull/1494[PR-1494])
+- Gradle now can accepts user input from its output tab. (link:https://github.com/apache/netbeans/pull/1461[PR-1461])
+- NetBeans honors the project's `org.gradle.jvmargs` property when launching Gradle Daemon (link:https://github.com/apache/netbeans/pull/1501[PR-1501]) 
+
+==== Other
 - JavaScript parser is now correctly licensed and no longer needs to be installed separately: link:https://github.com/apache/netbeans/pull/1407[https://github.com/apache/netbeans/pull/1407]
 - Enhancement to the installer enables subsets of Apache NetBeans to be installed: https://github.com/apache/netbeans/pull/1505
-- Performance enhancement: link:https://github.com/apache/netbeans/pull/1430[https://github.com/apache/netbeans/pull/1430]
 - Upgraded Payara support to Payara Platform 5.193: link:https://github.com/apache/netbeans/pull/1470[https://github.com/apache/netbeans/pull/1470]
-- Various Gradle enhancements, include being able to read JVM arguments, such as the JDK's "--enable-preview": link:https://github.com/apache/netbeans/pulls?q=is%3Apr+label%3AGradle+is%3Aclosed[https://github.com/apache/netbeans/pulls?q=is%3Apr+label%3AGradle+is%3Aclosed]
 - Amazon-related updates: link:https://github.com/apache/netbeans/pull/1312[https://github.com/apache/netbeans/pull/1312]
 - HTML5 attribute syntax support: link:https://github.com/apache/netbeans/pull/1380[https://github.com/apache/netbeans/pull/1380]
 - Cleaned up Welcome Screen no longer refers to Oracle backends: link:https://github.com/apache/netbeans/pull/1457[https://github.com/apache/netbeans/pull/1457]
