--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -247,51 +247,59 @@ a|image::contributor-sreimers.png[] a| * apache id: sreimers
 * Airbus Defence and Space
 * Bodensee, Germany
 |===
- 
-=== Thilina Ranathunga
-  - Nano Creations, Ekala, Sri Lanka 
-  - RCP, API, EE, Spring, Angular, TypeScript 
-  -  http://thilina01.com/
-  -  https://www.linkedin.com/in/thilina-ranathunga-35bb2864/
-  -  https://github.com/thilina01 
 
-=== Timon Veenstra 
-Committer, PMC Member
+[width="70%"]
+|=== 
+a|=== Thilina Ranathunga | 
+a|image::contributor-thilina01[] a| * apache id: thilina01
+* Nano Creations
+* Ekala, Sri Lanka
+* http://thilina01.com/
+* https://www.linkedin.com/in/thilina-ranathunga-35bb2864/
+* https://github.com/thilina01 
+|===
 
-  - apache id: timon 
-  - Corizon, Groningen, the Netherlands 
-  - Platform, Maven, API Support, JavaFX 
+[width="70%"]
+|=== 
+a|=== Timon Veenstra | 
+a|image::contributor-timon[] a| * apache id: timon
+* Corizon 
+* Ekala, Sri Lanka
+* Groningen, the Netherlands
+|===
 
-=== Tushar Joshi 
-Committer, PMC Member
+[width="70%"]
+|=== 
+a|=== Tushar Joshi | 
+a|image::contributor-tusharjoshi[] a| * apache id: tusharjoshi
+* Persistent Systems 
+* Nagpur, Maharashtra, India 
+|===
 
-  - apache id: tusharjoshi 
-  - Persistent Systems, Nagpur, Maharashtra, India 
-  - Platform, API Support 
-  -  NetBeans IDE Blog by Tushar Joshi 
+[width="70%"]
+|=== 
+a|=== Vladimir Voskresensky | 
+a|image::contributor-vladimirvv[] a| * apache id: vladimirvv
+* Azul 
+* St. Petersburg, Russia
+* C/C++, code model (ANTLR and Clang-based)
+|===
 
-=== Vladimir Voskresensky 
-Committer, PMC Member
+[width="70%"]
+|=== 
+a|=== Wade Chandler | 
+a|image::contributor-wadechandler[] a| * apache id: wadechandler
+* Knoxville 
+* TN, USA
+* C/C++, code model (ANTLR and Clang-based)
+|===
 
-  - apache id: vladimirvv 
-  - Azul, St. Petersburg, Russia 
-  - C/C++: code model (ANTLR and Clang-based), refactoring, code completion, reverese engineering, performance and memory optimizations 
-  -  NetBeans C/C++ Support 
-
-=== Wade Chandler 
-Committer, PMC Member
-
-  - apache id: wadechandler 
-  - Knoxville, TN, USA 
-  - Java, Groovy, Platform, API Support, Gradle, Maven, C++, Python 
-  - http://twitter.com/@wadechandler, wadechandler.com 
-
-=== Zoran Sevarac 
-Committer, PMC Member
-
-  - apache id: sevarac 
-  - University of Belgrade, Faculty of Organizational Sciences, Belgrade, Serbia 
-  - Platform, editor, code qualitty, artificial intelligence 
-  - http://twitter.com/@zsevarac 
-
+[width="70%"]
+|=== 
+a|=== Zoran Sevarac | 
+a|image::contributor-sevarac[] a| * apache id: sevarac
+* University of Belgrade 
+* Faculty of Organizational Sciences, Belgrade, Serbia
+* artificial intelligence, machine learning
+|===
 
