--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -251,7 +251,7 @@ a|image::contributor-sreimers.png[] a| * apache id: sreimers
 [width="70%"]
 |=== 
 a|=== Thilina Ranathunga | 
-a|image::contributor-thilina01[] a| * apache id: thilina01
+a|image::contributor-thilina01.png[] a| * apache id: thilina01
 * Nano Creations
 * Ekala, Sri Lanka
 * http://thilina01.com/
@@ -262,7 +262,7 @@ a|image::contributor-thilina01[] a| * apache id: thilina01
 [width="70%"]
 |=== 
 a|=== Timon Veenstra | 
-a|image::contributor-timon[] a| * apache id: timon
+a|image::contributor-timon.png[] a| * apache id: timon
 * Corizon 
 * Ekala, Sri Lanka
 * Groningen, the Netherlands
@@ -271,7 +271,7 @@ a|image::contributor-timon[] a| * apache id: timon
 [width="70%"]
 |=== 
 a|=== Tushar Joshi | 
-a|image::contributor-tusharjoshi[] a| * apache id: tusharjoshi
+a|image::contributor-tusharjoshi.png[] a| * apache id: tusharjoshi
 * Persistent Systems 
 * Nagpur, Maharashtra, India 
 |===
@@ -279,7 +279,7 @@ a|image::contributor-tusharjoshi[] a| * apache id: tusharjoshi
 [width="70%"]
 |=== 
 a|=== Vladimir Voskresensky | 
-a|image::contributor-vladimirvv[] a| * apache id: vladimirvv
+a|image::contributor-vladimirvv.png[] a| * apache id: vladimirvv
 * Azul 
 * St. Petersburg, Russia
 * C/C++, code model (ANTLR and Clang-based)
@@ -288,7 +288,7 @@ a|image::contributor-vladimirvv[] a| * apache id: vladimirvv
 [width="70%"]
 |=== 
 a|=== Wade Chandler | 
-a|image::contributor-wadechandler[] a| * apache id: wadechandler
+a|image::contributor-wadechandler.png[] a| * apache id: wadechandler
 * Knoxville 
 * TN, USA
 * C/C++, code model (ANTLR and Clang-based)
@@ -297,7 +297,7 @@ a|image::contributor-wadechandler[] a| * apache id: wadechandler
 [width="70%"]
 |=== 
 a|=== Zoran Sevarac | 
-a|image::contributor-sevarac[] a| * apache id: sevarac
+a|image::contributor-sevarac.png[] a| * apache id: sevarac
 * University of Belgrade 
 * Faculty of Organizational Sciences, Belgrade, Serbia
 * artificial intelligence, machine learning
