--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -53,6 +53,27 @@ a|image::contributor-avbravo.png[] a| * apache id: avbravo
 
 [width="70%"]
 |=== 
+a|=== Arunava Sinha| 
+a|image::contributor-asinha.png[] a| * apache id: asinha
+* India
+|=== 
+
+[width="70%"]
+|=== 
+a|=== Ate Douma| 
+a|image::contributor-ate.png[] a| * apache id: ate
+* Netherlands
+|=== 
+
+[width="70%"]
+|=== 
+a|=== Attila Kelemen| 
+a|image::contributor-kelemen.png[] a| * apache id: kelemen
+* Hungary
+|=== 
+
+[width="70%"]
+|=== 
 a|=== Bertrand Delacretaz| 
 a|image::contributor-bertrand.png[] a| * apache id: bdelacretaz
 * Switzerland
@@ -65,6 +86,13 @@ a|=== Bruno Flávio|
 a|image::contributor-brunoflavio.png[] a| * apache id: brunoflavio
 * Porto, Portugal
 * Groovy / Grails support 
+|===  
+
+[width="70%"]
+|=== 
+a|=== Bruno Souza| 
+a|image::contributor-brjavaman.png[] a| * apache id: brjavaman
+* Brazil
 |===   
 
 [width="70%"]
@@ -84,10 +112,32 @@ a|image::contributor-pandaconstantin.png[] a| * apache id: pandaconstantin
 
 [width="70%"]
 |=== 
+a|=== Daniel Gruno| 
+a|image::contributor-humbedooh.png[] a| * apache id: humbedooh
+* Denmark
+|===
+
+[width="70%"]
+|=== 
 a|=== David Heffelfinger| 
 a|image::contributor-dheffelfinger.png[] a| * apache id: dheffelfinger
 * Ensode Technology, LLC
 * Fairfax, VA, USA
+|===
+
+[width="70%"]
+|=== 
+a|=== Dusan Balek| 
+a|image::contributor-dbalek.png[] a| * apache id: dbalek
+* Oracle
+* Prague, Czech Republic
+|===
+
+[width="70%"]
+|=== 
+a|=== Eirik Bakke| 
+a|image::contributor-eirikbakke.png[] a| * apache id: eirikbakke
+* USA
 |===
 
 [width="70%"]
@@ -128,9 +178,30 @@ a|image::contributor-geertjan.png[] a| * apache id: geertjan
 
 [width="70%"]
 |=== 
+a|=== Glenn Holmer| 
+a|image::contributor-cenbe.png[] a| * apache id: Cenbe
+* USA
+|===
+
+[width="70%"]
+|=== 
 a|=== Ioannis Kostaras| 
 a|image::contributor-ikost.png[] a| * apache id: ikost
 * Liége, Belgium
+|===
+
+[width="70%"]
+|=== 
+a|=== Ivar Grimstad| 
+a|image::contributor-ivargrimstad.png[] a| * apache id: ivargrimstad
+* Sweden
+|===
+
+[width="70%"]
+|=== 
+a|=== James Gosling	| 
+a|image::contributor-jag.png[] a| * apache id: jag
+* USA
 |===
 
 [width="70%"]
