Fix some wording

--- a/netbeans.apache.org/src/content/download/nb112/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb112/index.asciidoc
@@ -125,14 +125,14 @@ See link:https://github.com/apache/netbeans/milestone/3?closed=1[the closed pull
 ==== Gradle
 
 - The Gradle Plugin now can read the compiler arguments, enabling the IDE support for Java preview features on Gradle projects as well. (link:https://github.com/apache/netbeans/pull/1494[PR-1494])
-- Gradle now can accepts user input from its output tab. (link:https://github.com/apache/netbeans/pull/1461[PR-1461])
+- Gradle now can accept user input from its output tab. (link:https://github.com/apache/netbeans/pull/1461[PR-1461])
 - NetBeans honors the project's `org.gradle.jvmargs` property when launching Gradle Daemon (link:https://github.com/apache/netbeans/pull/1501[PR-1501]) 
 
 ==== Other
 - JavaScript parser is now correctly licensed and no longer needs to be installed separately (link:https://github.com/apache/netbeans/pull/1407[PR-1407])
 - Enhancement to the installer enables subsets of Apache NetBeans to be installed (link:https://github.com/apache/netbeans/pull/1505[PR-1505])
 - Upgraded Payara support to Payara Platform 5.193 (link:https://github.com/apache/netbeans/pull/1470[PR-1470])
-- Amazon-related updates (link:https://github.com/apache/netbeans/pull/1312[PR-1312])
+- Amazon Beanstalk support updates (link:https://github.com/apache/netbeans/pull/1312[PR-1312])
 - HTML5 attribute syntax support (link:https://github.com/apache/netbeans/pull/1380[PR-1380])
 - Cleaned up Welcome Screen no longer refers to Oracle backends (link:https://github.com/apache/netbeans/pull/1457[PR-1457])
 
