--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -215,6 +215,29 @@ a|image::contributor-jlahoda.png[] a| * apache id: jlahoda
 
 [width="70%"]
 |=== 
+a|=== Jan Pirek| 
+a|image::contributor-jpirek.png[] a| * apache id: jpirek
+* Oracle
+* Prague, Czech Republic
+|===
+
+[width="70%"]
+|=== 
+a|=== Jaroslav Tulach| 
+a|image::contributor-jtulach.png[] a| * apache id: jtulach
+* Oracle
+* Prague, Czech Republic
+|===
+
+[width="70%"]
+|=== 
+a|=== Jean-Marc Borer	| 
+a|image::contributor-jmborer.png[] a| * apache id: jmborer
+* Switzerland
+|===
+
+[width="70%"]
+|=== 
 a|=== Jesse Glick| 
 a|image::contributor-jglick.png[] a| * apache id: jglick
 * CloudBees
@@ -233,11 +256,26 @@ a|image::contributor-jkovalsky.png[] a| * apache id: jkovalsky
 
 [width="70%"]
 |=== 
+a|=== Johan Vos| 
+a|image::contributor-jkovalsky.png[] a| * apache id: jvos
+* Gluon
+* Belgium
+|===
+
+[width="70%"]
+|=== 
 a|=== John McDonnell| 
 a|image::contributor-johnmcdonnell.png[] a| * apache id: johnmcdonnell
 * BearingPoint Ireland
 * Dublin, Ireland 
 * Maven, Java EE, Docker  
+|===
+
+[width="70%"]
+|=== 
+a|=== Joerg Michelberger	| 
+a|image::contributor-jmichelberger.png[] a| * apache id: jmichelberger
+* Germany  
 |===
 
 [width="70%"]
