--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -55,7 +55,8 @@ a|image::contributor-avbravo.png[] a| * apache id: avbravo
 |=== 
 a|=== Arunava Sinha| 
 a|image::contributor-asinha.png[] a| * apache id: asinha
-* India
+* Oracle
+* Bangalore, India
 |=== 
 
 [width="70%"]
@@ -257,7 +258,7 @@ a|image::contributor-jkovalsky.png[] a| * apache id: jkovalsky
 [width="70%"]
 |=== 
 a|=== Johan Vos| 
-a|image::contributor-jkovalsky.png[] a| * apache id: jvos
+a|image::contributor-johanvos.png[] a| * apache id: jvos
 * Gluon
 * Belgium
 |===
@@ -277,6 +278,14 @@ a|=== Joerg Michelberger	|
 a|image::contributor-jmichelberger.png[] a| * apache id: jmichelberger
 * Germany  
 |===
+
+[width="70%"]
+|=== 
+a|=== Jan Pirek | 
+a|image::contributor-jpirek.png[] a| * apache id: jpirek
+* Prague 
+* Czech Republic
+|=== 
 
 [width="70%"]
 |=== 
@@ -348,6 +357,22 @@ a|image::contributor-neilcsmith.png[] a| * apache id: neilcsmith
 * Praxis LIVE
 * Oxford, UK 
 |===
+
+[width="70%"]
+|=== 
+a|=== Reema Taneja
+a|image::contributor-rtaneja1.png[] a| * apache id: rtaneja1
+* Oracle
+* Bangalore, India
+|=== 
+ 
+[width="70%"]
+|=== 
+a|=== Svata Dedic | 
+a|image::contributor-sdedic.png[] a| * apache id: sdedic
+* Prague 
+* Czech Republic
+|=== 
  
 [width="70%"]
 |=== 
@@ -375,6 +400,14 @@ a|image::contributor-timon.png[] a| * apache id: timon
 * Corizon 
 * Ekala, Sri Lanka
 * Groningen, the Netherlands
+|===
+
+[width="70%"]
+|=== 
+a|=== Tomas Zezula | 
+a|image::contributor-tzezula.png[] a| * apache id: tzezula
+* Prague 
+* Czech Republic
 |===
 
 [width="70%"]
