--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -257,6 +257,13 @@ a|image::contributor-jkovalsky.png[] a| * apache id: jkovalsky
 
 [width="70%"]
 |=== 
+a|=== Joerg Michelberger	| 
+a|image::contributor-jmichelberger.png[] a| * apache id: jmichelberger
+* Germany  
+|===
+
+[width="70%"]
+|=== 
 a|=== Johan Vos| 
 a|image::contributor-johanvos.png[] a| * apache id: jvos
 * Gluon
@@ -274,18 +281,17 @@ a|image::contributor-johnmcdonnell.png[] a| * apache id: johnmcdonnell
 
 [width="70%"]
 |=== 
-a|=== Joerg Michelberger	| 
-a|image::contributor-jmichelberger.png[] a| * apache id: jmichelberger
-* Germany  
+a|=== José Pereda| 
+a|image::contributor-jperedadnr.png[] a| * apache id: jperedadnr
+* Spain
 |===
 
 [width="70%"]
 |=== 
-a|=== Jan Pirek | 
-a|image::contributor-jpirek.png[] a| * apache id: jpirek
-* Prague 
-* Czech Republic
-|=== 
+a|=== Josh Juneau| 
+a|image::contributor-javajuneau.png[] a| * apache id: javajuneau
+* USA
+|===
 
 [width="70%"]
 |=== 
@@ -301,6 +307,21 @@ a|=== Ken Fogel|
 a|image::contributor-kfogel.png[] a| * apache id: kfogel
 * Dawson College
 * Montreal, Quebec, Canada
+|===
+
+[width="70%"]
+|=== 
+a|=== Kirk Pepperdine	| 
+a|image::contributor-kirk-pepperdine.png[] a| * apache id: kirk-pepperdine
+* Microsoft
+* Hungary
+|===
+
+[width="70%"]
+|=== 
+a|=== Lars Bruun-Hansen| 
+a|image::contributor-lbruun.png[] a| * apache id: lbruun
+* Sweden
 |===
 
 [width="70%"]
@@ -330,6 +351,21 @@ a|image::contributor-markee174.png[] a| * apache id: markee174
 
 [width="70%"]
 |=== 
+a|=== Mark Struberg| 
+a|image::contributor-struberg.png[] a| * apache id: struberg
+* Vienna, Austria
+|===
+
+[width="70%"]
+|=== 
+a|=== Martin Entlicher| 
+a|image::contributor-entl.png[] a| * apache id: entl
+* Oracle
+* Prague, Czech Republic
+|===	
+
+[width="70%"]
+|=== 
 a|=== Martin Klähn| 
 a|image::contributor-mklaehn.png[] a| * apache id: mklaehn
 * Airbus Defence and Space
@@ -338,15 +374,15 @@ a|image::contributor-mklaehn.png[] a| * apache id: mklaehn
 
 [width="70%"]
 |=== 
-a|=== Michael Müller| 
-a|image::contributor-muellermi.png[] a| * apache id: muellermi
+a|=== Matthias Bläsing| 
+a|image::contributor-matthiasblaesing.png[] a| * apache id: matthiasblaesing
 * Germany
 |===
 
 [width="70%"]
 |=== 
-a|=== Matthias Bläsing| 
-a|image::contributor-matthiasblaesing.png[] a| * apache id: matthiasblaesing
+a|=== Michael Müller| 
+a|image::contributor-muellermi.png[] a| * apache id: muellermi
 * Germany
 |===
 
