--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -396,11 +396,11 @@ a|image::contributor-neilcsmith.png[] a| * apache id: neilcsmith
 
 [width="70%"]
 |=== 
-a|=== Reema Taneja
+a|=== Reema Taneja| 
 a|image::contributor-rtaneja1.png[] a| * apache id: rtaneja1
 * Oracle
-* Bangalore, India
-|=== 
+* Bangalore, India 
+|===
  
 [width="70%"]
 |=== 
