--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -388,10 +388,31 @@ a|image::contributor-muellermi.png[] a| * apache id: muellermi
 
 [width="70%"]
 |=== 
+a|=== Michael Nascimento| 
+a|image::contributor-misterm.png[] a| * apache id: misterm
+* Brazil
+|===
+
+[width="70%"]
+|=== 
+a|=== Michel Graciano| 
+a|image::contributor-mgraciano.png[] a| * apache id: mgraciano
+* Brazil
+|===
+
+[width="70%"]
+|=== 
 a|=== Neil C Smith| 
 a|image::contributor-neilcsmith.png[] a| * apache id: neilcsmith
 * Praxis LIVE
 * Oxford, UK 
+|===
+
+[width="70%"]
+|=== 
+a|=== Ralph Benjamin Ruijs| 
+a|image::contributor-ralphbenjamin.png[] a| * apache id: ralphbenjamin
+* Netherlands 
 |===
 
 [width="70%"]
@@ -402,6 +423,27 @@ a|image::contributor-rtaneja1.png[] a| * apache id: rtaneja1
 * Bangalore, India 
 |===
  
+[width="70%"]
+|=== 
+a|=== Sarvesh Kesharwani| 
+a|image::contributor-sarvesh.png[] a| * apache id: sarvesh
+* Bangalore, India 
+|=== 
+
+[width="70%"]
+|=== 
+a|=== Shai Almog| 
+a|image::contributor-codenameone.png[] a| * apache id: codenameone
+* Israel
+|=== 
+
+[width="70%"]
+|=== 
+a|=== Simon Phipps| 
+a|image::contributor-webmink.png[] a| * apache id: webmink
+* England
+|=== 
+  
 [width="70%"]
 |=== 
 a|=== Svata Dedic | 
@@ -453,6 +495,13 @@ a|image::contributor-tusharjoshi.png[] a| * apache id: tusharjoshi
 * Persistent Systems 
 * Nagpur, Maharashtra, India 
 |===
+
+[width="70%"]
+|=== 
+a|=== Vikas Prabhakar| 
+a|image::contributor-vikasprabhakar.png[] a| * apache id: vikasprabhakar
+* Bangalore, India 
+|=== 
 
 [width="70%"]
 |=== 
