--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -28,11 +28,11 @@ Apache NetBeans Project Management Committee and Committers are listed alphabeti
 
 [width="70%"]
 |=== 
-a|=== Anton Epple| 
-a|image::contributor-monacotoni.png[] a| * apache id: monacotoni
+a|=== Anton Epple| id: monacotoni 
+a|image::contributor-monacotoni.png[] a| * link:https://github.com/dukescript[github]
 * Dukehoff GmbH
 * Munich, Germany
-* DukeScript, HTML/Java, NetBeans Platform 
+* Twitter: link:https://twitter.com/monacotoni[@monacotoni] 
 |=== 
 
 [width="70%"]
