--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -29,9 +29,9 @@ Apache NetBeans Project Management Committee and Committers are listed alphabeti
 [width="70%"]
 |=== 
 a|=== Anton Epple| id: monacotoni 
-a|image::contributor-monacotoni.png[] a| * link:https://github.com/dukescript[github]
-* Dukehoff GmbH
+a|image::contributor-monacotoni.png[] a| * Dukehoff GmbH
 * Munich, Germany
+* link:https://github.com/dukescript[github]
 * Twitter: link:https://twitter.com/monacotoni[@monacotoni] 
 |=== 
 
