--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -28,10 +28,10 @@ Apache NetBeans Project Management Committee and Committers are listed alphabeti
 
 [width="70%"]
 |=== 
-a|=== Anton Epple| id: monacotoni 
+a|=== Anton Epple| 
 a|image::contributor-monacotoni.png[] a| * Dukehoff GmbH
 * Munich, Germany
-* link:https://github.com/dukescript[github]
+* link:https://github.com/dukescript[GitHub]
 * Twitter: link:https://twitter.com/monacotoni[@monacotoni] 
 |=== 
 
