--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -29,10 +29,11 @@ Apache NetBeans Project Management Committee and Committers are listed alphabeti
 [width="70%"]
 |=== 
 a|=== Anton Epple| 
-a|image::contributor-monacotoni.png[] a| * Dukehoff GmbH
+a|image::contributor-monacotoni.png[] a| * link:https://dukescript.com[Dukehoff GmbH]
 * Munich, Germany
 * link:https://github.com/dukescript[GitHub]
-* Twitter: link:https://twitter.com/monacotoni[@monacotoni] 
+* link:https://github.com/apache/netbeans/commits?author=dukescript[Apache NetBeans commits]
+* Twitter: link:https://twitter.com/monacotoni[@monacotoni]
 |=== 
 
 [width="70%"]
