Tweaking Geertjan info

--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -172,10 +172,11 @@ a|image::contributor-florian.png[] a| * apache id: fvogler
 [width="70%"]
 |=== 
 a|=== Geertjan Wielenga| 
-a|image::contributor-geertjan.png[] a| * apache id: geertjan
-* Oracle
+a|image::contributor-geertjan.png[] a| * Oracle
 * Amsterdam, Netherlands
-* NetBeans Platform, Java Editor
+* link:https://github.com/geertjanw[GitHub]
+* link:https://github.com/apache/netbeans/commits?author=geertjanw[Apache NetBeans commits]
+* Twitter: link:https://twitter.com/geertjanw[@geertjanw]
 |===
 
 [width="70%"]
