--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -173,7 +173,7 @@ a|image::contributor-florian.png[] a| * apache id: fvogler
 |=== 
 a|=== Geertjan Wielenga| 
 a|image::contributor-geertjan.png[] a| * Oracle
-* Amsterdam, Netherlands
+* Amsterdam, The Netherlands
 * link:https://github.com/geertjanw[GitHub]
 * link:https://github.com/apache/netbeans/commits?author=geertjanw[Apache NetBeans commits]
 * Twitter: link:https://twitter.com/geertjanw[@geertjanw]
