--- a/netbeans.apache.org/src/content/download/nb112/nb112.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb112/nb112.asciidoc
@@ -52,6 +52,8 @@ link:https://www.apache.org/dist/netbeans/netbeans/11.2/netbeans-11.2-bin.zip.as
 (link:https://www.apache.org/dist/netbeans/netbeans/11.2/netbeans-11.2-source.zip.sha512[SHA-512],
 link:https://www.apache.org/dist/netbeans/netbeans/11.2/netbeans-11.2-source.zip.asc[PGP ASC])
 
+- Installers: link:https://www.apache.org/dist/netbeans/netbeans/11.2/[https://www.apache.org/dist/netbeans/netbeans/11.2/]
+
 ////
 NOTE: Using https below is highly recommended.
 ////
