--- a/netbeans.apache.org/src/content/download/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/index.asciidoc
@@ -37,6 +37,12 @@ community testing process, and will remain available and supported for
 a year.  Our other quarterly releases provide early access to new
 features. See link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[full release schedule].
 
+== Apache NetBeans 11 feature update 2 (NB 11.2)
+
+Latest version of the IDE, released on October 31, 2019.
+
+link:/download/nb112/index.html[Features, role="button"] link:/download/nb112/nb112.html[Download, role="button success"]
+
 == Apache NetBeans 11 feature update 1 (NB 11.1)
 
 Latest version of the IDE, released on July 22, 2019.
