Tweaks to Gradle section

--- a/netbeans.apache.org/src/content/download/nb112/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb112/index.asciidoc
@@ -124,8 +124,8 @@ See link:https://github.com/apache/netbeans/milestone/3?closed=1[the closed pull
 
 ==== Gradle
 
-- The Gradle Plugin now can read the compiler arguments, enabling the IDE support for Java preview features on Gradle projects as well. (link:https://github.com/apache/netbeans/pull/1494[PR-1494])
-- Gradle now can accept user input from its output tab. (link:https://github.com/apache/netbeans/pull/1461[PR-1461])
+- The Gradle features can now read Java compiler arguments, enabling NetBeans support for Java preview features in Gradle projects. (link:https://github.com/apache/netbeans/pull/1494[PR-1494])
+- Gradle now can accept user input from its Output tab. (link:https://github.com/apache/netbeans/pull/1461[PR-1461])
 - NetBeans honors the project's `org.gradle.jvmargs` property when launching Gradle Daemon (link:https://github.com/apache/netbeans/pull/1501[PR-1501]) 
 
 ==== Other
