Complete update of website for release 11.2 (#426)
- change news header to point at new release
- update installer links to use mirrors
- change release date to official release date
- update build instructions
- move 11.1 to release archive page and change download links to use archive.apache.org

--- a/netbeans.apache.org/src/content/download/archive/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/archive/index.asciidoc
@@ -29,6 +29,12 @@
 Older Apache NetBeans releases and pre-Apache NetBeans releases can still be
 downloaded, but are no longer supported.
 
+== Apache NetBeans 11 feature update 1 (NB 11.1)
+
+Apache NetBeans 11.1 was released on July 22, 2019.
+
+link:/download/nb111/index.html[Features, role="button"] link:/download/nb111/nb111.html[Download, role="button success"]
+
 == Apache NetBeans 10.0
 
 Apache NetBeans 10.0 was released on December 27, 2018.
@@ -47,6 +53,4 @@ link:/download/nb90/[Features, role="button"] link:/download/nb90/nb90.html[Down
 - https://netbeans.org/downloads/8.1/
 - https://netbeans.org/downloads/8.0/
 - https://netbeans.org/downloads/7.4/
-
-
 
