--- a/netbeans.apache.org/src/content/download/nb111/nb111.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb111/nb111.asciidoc
@@ -44,25 +44,25 @@ NOTE: It's NOT recommended to link to github.
 Apache NetBeans 11.1 is available for download from your closest Apache mirror.
 
 - Binaries: 
-link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.1/netbeans-11.1-bin.zip[netbeans-11.1-bin.zip] (
-link:https://www.apache.org/dist/netbeans/netbeans/11.1/netbeans-11.1-bin.zip.sha512[SHA-512],
-link:https://www.apache.org/dist/netbeans/netbeans/11.1/netbeans-11.1-bin.zip.asc[PGP ASC])
+link:https://archive.apache.org/dist/netbeans/netbeans/11.1/netbeans-11.1-bin.zip[netbeans-11.1-bin.zip] (
+link:https://archive.apache.org/dist/netbeans/netbeans/11.1/netbeans-11.1-bin.zip.sha512[SHA-512],
+link:https://archive.apache.org/dist/netbeans/netbeans/11.1/netbeans-11.1-bin.zip.asc[PGP ASC])
 
 - Installers:
  
-* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.1/Apache-NetBeans-11.1-bin-windows-x64.exe[Apache-NetBeans-11.1-bin-windows-x64.exe] (
-link:https://www.apache.org/dist/netbeans/netbeans/11.1/Apache-NetBeans-11.1-bin-windows-x64.exe.sha512[SHA-512],
-link:https://www.apache.org/dist/netbeans/netbeans/11.1/Apache-NetBeans-11.1-bin-windows-x64.exe.asc[PGP ASC])
-* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.1/Apache-NetBeans-11.1-bin-linux-x64.sh[Apache-NetBeans-11.1-bin-linux-x64.sh] (
-link:https://www.apache.org/dist/netbeans/netbeans/11.1/Apache-NetBeans-11.1-bin-linux-x64.sh.sha512[SHA-512],
-link:https://www.apache.org/dist/netbeans/netbeans/11.1/Apache-NetBeans-11.1-bin-linux-x64.sh.asc[PGP ASC])
-* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.1/Apache-NetBeans-11.1-bin-macosx.dmg[Apache-NetBeans-11.1-bin-macosx.dmg] (
-link:https://www.apache.org/dist/netbeans/netbeans/11.1/Apache-NetBeans-11.1-bin-macosx.dmg.sha512[SHA-512],
-link:https://www.apache.org/dist/netbeans/netbeans/11.1/Apache-NetBeans-11.1-bin-macosx.dmg.asc[PGP ASC])
+* link:https://archive.apache.org/dist/netbeans/netbeans/11.1/Apache-NetBeans-11.1-bin-windows-x64.exe[Apache-NetBeans-11.1-bin-windows-x64.exe] (
+link:https://archive.apache.org/dist/netbeans/netbeans/11.1/Apache-NetBeans-11.1-bin-windows-x64.exe.sha512[SHA-512],
+link:https://archive.apache.org/dist/netbeans/netbeans/11.1/Apache-NetBeans-11.1-bin-windows-x64.exe.asc[PGP ASC])
+* link:https://archive.apache.org/dist/netbeans/netbeans/11.1/Apache-NetBeans-11.1-bin-linux-x64.sh[Apache-NetBeans-11.1-bin-linux-x64.sh] (
+link:https://archive.apache.org/dist/netbeans/netbeans/11.1/Apache-NetBeans-11.1-bin-linux-x64.sh.sha512[SHA-512],
+link:https://archive.apache.org/dist/netbeans/netbeans/11.1/Apache-NetBeans-11.1-bin-linux-x64.sh.asc[PGP ASC])
+* link:https://archive.apache.org/dist/netbeans/netbeans/11.1/Apache-NetBeans-11.1-bin-macosx.dmg[Apache-NetBeans-11.1-bin-macosx.dmg] (
+link:https://archive.apache.org/dist/netbeans/netbeans/11.1/Apache-NetBeans-11.1-bin-macosx.dmg.sha512[SHA-512],
+link:https://archive.apache.org/dist/netbeans/netbeans/11.1/Apache-NetBeans-11.1-bin-macosx.dmg.asc[PGP ASC])
 
-- Source: link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.1/netbeans-11.1-source.zip[netbeans-11.1-source.zip] 
-(link:https://www.apache.org/dist/netbeans/netbeans/11.1/netbeans-11.1-source.zip.sha512[SHA-512],
-link:https://www.apache.org/dist/netbeans/netbeans/11.1/netbeans-11.1-source.zip.asc[PGP ASC])
+- Source: link:https://archive.apache.org/dist/netbeans/netbeans/11.1/netbeans-11.1-source.zip[netbeans-11.1-source.zip] 
+(link:https://archive.apache.org/dist/netbeans/netbeans/11.1/netbeans-11.1-source.zip.sha512[SHA-512],
+link:https://archive.apache.org/dist/netbeans/netbeans/11.1/netbeans-11.1-source.zip.asc[PGP ASC])
 
 - Javadoc for this release is available at https://bits.netbeans.org/11.1/javadoc
 
@@ -71,7 +71,7 @@ NOTE: Using https below is highly recommended.
 ////
 Officially, it is important that you link:https://www.apache.org/dyn/closer.cgi#verify[verify the integrity]
 of the downloaded files using the PGP signatures (.asc file) or a hash (.sha512 files).
-The PGP keys used to sign this release are available link:https://www.apache.org/dist/netbeans/KEYS[here].
+The PGP keys used to sign this release are available link:https://archive.apache.org/dist/netbeans/KEYS[here].
 
 Apache NetBeans can also be installed as a self-contained link:https://snapcraft.io/netbeans[snap package] on Linux.
 
@@ -84,12 +84,12 @@ Apache NetBeans 11.1 runs on JDK 8, 11, and 12.  (JDK 12 is the current JDK rele
 
 To build Apache NetBeans 11.1 from source you need:
 
-. Oracle's Java 8 or Open JDK v8.
+. Oracle's Java 8 or OpenJDK v8.
 . Apache Ant 1.10 or greater (https://ant.apache.org).
 
 Once you have everything installed then:
 
-1. Unzip link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.1/netbeans-11.1-source.zip[netbeans-11.1-source.zip]
+1. Unzip link:https://archive.apache.org/dist/netbeans/netbeans/11.1/netbeans-11.1-source.zip[netbeans-11.1-source.zip]
 in a directory of your liking.
 2. `cd` to that directory, and then run `ant` to build the Apache NetBeans IDE.
 Once built you can run the IDE by typing `./nbbuild/netbeans/bin/netbeans`
