--- a/netbeans.apache.org/src/content/download/nb112/nb112.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb112/nb112.asciidoc
@@ -33,7 +33,7 @@ for important requirements for download pages for Apache projects.
 :toc-title:
 :icons: font
 
-Apache NetBeans 11.2 was released on October 31, 2019.
+Apache NetBeans 11.2 was released on October 25, 2019.
 See link:/download/nb112/index.html[Apache NetBeans 11.2 Features] for a full list of features.
 
 ////
@@ -52,7 +52,17 @@ link:https://www.apache.org/dist/netbeans/netbeans/11.2/netbeans-11.2-bin.zip.as
 (link:https://www.apache.org/dist/netbeans/netbeans/11.2/netbeans-11.2-source.zip.sha512[SHA-512],
 link:https://www.apache.org/dist/netbeans/netbeans/11.2/netbeans-11.2-source.zip.asc[PGP ASC])
 
-- Installers: link:https://www.apache.org/dist/netbeans/netbeans/11.2/[installers for supported platforms]
+- Installers:
+ 
+* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-windows-x64.exe[Apache-NetBeans-11.2-bin-windows-x64.exe] (
+link:https://www.apache.org/dist/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-windows-x64.exe.sha512[SHA-512],
+link:https://www.apache.org/dist/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-windows-x64.exe.asc[PGP ASC])
+* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-linux-x64.sh[Apache-NetBeans-11.2-bin-linux-x64.sh] (
+link:https://www.apache.org/dist/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-linux-x64.sh.sha512[SHA-512],
+link:https://www.apache.org/dist/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-linux-x64.sh.asc[PGP ASC])
+* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-macosx.dmg[Apache-NetBeans-11.2-bin-macosx.dmg] (
+link:https://www.apache.org/dist/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-macosx.dmg.sha512[SHA-512],
+link:https://www.apache.org/dist/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-macosx.dmg.asc[PGP ASC])
 
 ////
 NOTE: Using https below is highly recommended.
@@ -71,15 +81,16 @@ Apache NetBeans 11.2 runs on JDK 8, 11, and 13.  (JDK 13 is the current JDK rele
 
 To build Apache NetBeans 11.2 from source you need:
 
-. Oracle's Java 8 or Open JDK v8.
+. Oracle's Java 8 or OpenJDK v8.
 . Apache Ant 1.10 or greater (https://ant.apache.org).
 
 Once you have everything installed then:
 
 1. Unzip link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.2/netbeans-11.2-source.zip[netbeans-11.2-source.zip]
 in a directory of your liking.
-2. `cd` to that directory, and then run `ant` to build the Apache NetBeans IDE.
-Once built you can run the IDE by typing `./nbbuild/netbeans/bin/netbeans`
+2. `cd` to that directory, and then run `ant build` to build the Apache NetBeans IDE.
+3. A zip of the IDE will be built inside `nbbuild`. Unzip this in a place of your choosing.
+4. Inside the unzipped IDE run `./bin/netbeans` (Linux / macOS) or `./bin/netbeans.exe` (Windows).
 
 == Community approval
 
