--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -100,8 +100,9 @@ a|image::contributor-brjavaman.png[] a| * apache id: brjavaman
 [width="70%"]
 |=== 
 a|=== Christian Lenz| 
-a|image::contributor-chrizzly.png[] a| * apache id: chrizzly
+a|image::contributor-chrizzly.png[] a| * apache id: Spreadshirt
 * Leipzig, Germany
+* Twitter: link:https://twitter.com/Chrizzly42[@Chrizzly42]
 |===  
 
 [width="70%"]
