--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -100,7 +100,7 @@ a|image::contributor-brjavaman.png[] a| * apache id: brjavaman
 [width="70%"]
 |=== 
 a|=== Christian Lenz| 
-a|image::contributor-chrizzly.png[] a| * apache id: Spreadshirt
+a|image::contributor-chrizzly.png[] a| * Spreadshirt
 * Leipzig, Germany
 * Twitter: link:https://twitter.com/Chrizzly42[@Chrizzly42]
 |===  
