--- a/netbeans.apache.org/src/content/download/nb112/nb112.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb112/nb112.asciidoc
@@ -69,7 +69,7 @@ NOTE: Using https below is highly recommended.
 ////
 Officially, it is important that you link:https://www.apache.org/dyn/closer.cgi#verify[verify the integrity]
 of the downloaded files using the PGP signatures (.asc file) or a hash (.sha512 files).
-The PGP keys used to sign this release are available link:https://www.apache.org/dist/netbeans/KEYS[here].
+The PGP signatures should be matched against the link:https://www.apache.org/dist/netbeans/KEYS[KEYS] file which contains the PGP keys used to sign this release.
 
 Apache NetBeans can also be installed as a self-contained link:https://snapcraft.io/netbeans[snap package] on Linux.
 
