[NETBEANS-1867] Asciidoc cleanup for numbered lists and sections (#443)
* Numbered lists
* cnd and javaee
* websvc and java
* webclient
* ide
* about/community/participate

--- a/netbeans.apache.org/src/content/about/history.asciidoc
+++ b/netbeans.apache.org/src/content/about/history.asciidoc
@@ -33,7 +33,9 @@ Republic, in 1996. The goal was to write a link:https://en.wikipedia.org/wiki/De
 Development Environment) in Java. 
 
 Xelfi was the first Java IDE written in Java, with its first pre-releases in
-1997. Xelfi was a fun project to work on, especially since the Java IDE space
+
+[start=1997]
+. Xelfi was a fun project to work on, especially since the Java IDE space
 was uncharted territory at that time.
 
 image::nb-history-1.png[caption="", title="Here you see the original group of students who constituted the original NetBeans Team"]
