--- a/netbeans.apache.org/src/content/community/mailing-lists.asciidoc
+++ b/netbeans.apache.org/src/content/community/mailing-lists.asciidoc
@@ -35,7 +35,7 @@ the email addresses below, substituting `subscribe@` with `digest-subscribe@` an
 
 
 [[users]]
-=== Users list
+== Users list
 
 Use this list to ask questions about the usage of the NetBeans IDE, whether
 for Java, JavaScript, C/C++, or any other language or technology, whether as user of NetBeans IDE or developer on top of the NetBeans Platform.
@@ -51,7 +51,7 @@ Using prefix tags in the subject line, such as [ java ] or [ javascript ] is enc
 - +++ <a href="https://lists.apache.org/list.html?users@netbeans.apache.org">Pony mail archive</a> +++
 
 [[dev]]
-=== Dev list
+== Dev list
 
 Specifically for those committed to working on the development of Apache
 NetBeans itself, as well as those committed to promoting and documenting it,
@@ -64,7 +64,7 @@ via events and tutorials, etc.
 - +++ <a href="https://lists.apache.org/list.html?dev@netbeans.apache.org">Pony mail archive</a> +++
 
 [[netcat]]
-=== NetCAT list
+== NetCAT list
 
 Specifically for those involved in the NetBeans Community Acceptance Testing (NetCAT) program.
 
@@ -75,7 +75,7 @@ Specifically for those involved in the NetBeans Community Acceptance Testing (Ne
 - +++ <a href="https://lists.apache.org/list.html?netcat@netbeans.apache.org">Pony mail archive</a> +++
 
 [[announce]]
-=== Announce list
+== Announce list
 
 Receive announcements only, e.g., when a new release is made available, i.e.,
 for those who do not want to get much traffic though want to keep up with the
@@ -88,7 +88,7 @@ are able to write to this mailing list.
 - link:http://mail-archives.apache.org/mod_mbox/netbeans-announce/[See the Apache mailing list archive]
 
 [[commits]]
-=== Commits list
+== Commits list
 
 Receive GitHub commit messages whenever a commit is done.
 
@@ -99,7 +99,7 @@ Receive GitHub commit messages whenever a commit is done.
 - +++ <a href="https://lists.apache.org/list.html?commits@netbeans.apache.org">Pony mail archive</a> +++
 
 [[notifications]]
-=== Notifications list
+== Notifications list
 
 Receive GitHub notifications whenever someone adds a comment to an issue and whenever a new pull request is opened or closed.
 
