--- a/netbeans.apache.org/src/content/download/nb111/nb111.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb111/nb111.asciidoc
@@ -91,7 +91,9 @@ Once you have everything installed then:
 
 1. Unzip link:https://archive.apache.org/dist/netbeans/netbeans/11.1/netbeans-11.1-source.zip[netbeans-11.1-source.zip]
 in a directory of your liking.
-2. `cd` to that directory, and then run `ant` to build the Apache NetBeans IDE.
+
+[start=2]
+. `cd` to that directory, and then run `ant` to build the Apache NetBeans IDE.
 Once built you can run the IDE by typing `./nbbuild/netbeans/bin/netbeans`
 
 == Community approval
