--- a/netbeans.apache.org/src/content/download/nb112/nb112.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb112/nb112.asciidoc
@@ -88,9 +88,15 @@ Once you have everything installed then:
 
 1. Unzip link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.2/netbeans-11.2-source.zip[netbeans-11.2-source.zip]
 in a directory of your liking.
-2. `cd` to that directory, and then run `ant build` to build the Apache NetBeans IDE.
-3. A zip of the IDE will be built inside `nbbuild`. Unzip this in a place of your choosing.
-4. Inside the unzipped IDE run `./bin/netbeans` (Linux / macOS) or `./bin/netbeans.exe` (Windows).
+
+[start=2]
+. `cd` to that directory, and then run `ant build` to build the Apache NetBeans IDE.
+
+[start=3]
+. A zip of the IDE will be built inside `nbbuild`. Unzip this in a place of your choosing.
+
+[start=4]
+. Inside the unzipped IDE run `./bin/netbeans` (Linux / macOS) or `./bin/netbeans.exe` (Windows).
 
 == Community approval
 
