--- a/netbeans.apache.org/src/content/participate/submit-pr.asciidoc
+++ b/netbeans.apache.org/src/content/participate/submit-pr.asciidoc
@@ -136,7 +136,7 @@ https://git-scm.com/book/en/v2/Git-Tools-Rewriting-History
 After submission (and certainly after someone starts reviewing the PR) you shouldn't touch the PR's history. 
 
 [[donating-code]]
-= Donating Code
+== Donating Code
 
 You may find official information here: https://incubator.apache.org/ip-clearance/
 
