Adding information on Jackpot 3.0.

--- a/netbeans.apache.org/src/content/help/index.asciidoc
+++ b/netbeans.apache.org/src/content/help/index.asciidoc
@@ -55,6 +55,11 @@ These other resources are available:
 
 Some parts of the NetBeans Wiki link:/wiki/index.asciidoc[have been ported], but need review.
 
+[[jackpot]]
+== Java Declarative Refactorings
+
+Documentation on how to declare and use Java Declarative Refactorings link:/jackpot/index.html[is here].
+
 [[support]]
 == Support
 
