--- a/netbeans.apache.org/src/content/download/nb113/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb113/index.asciidoc
@@ -31,4 +31,14 @@
 :experimental:
 :linkattrs:
 
-Apache NetBeans 11.3 is the second Apache NetBeans release outside the Apache Incubator and the link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[second release of the new quarterly release cycle].
+Apache NetBeans 11.3 is the third Apache NetBeans release outside the Apache Incubator and the link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[third release of the new quarterly release cycle].
+
+TIP: The LTS release of the Apache NetBeans 11 cycle is Apache NetBeans 11.0. The 11.1, 11.2, and 11.3 releases have not been tested as heavily as the LTS release and may therefore be less stable. Use 11.3 to use the latest features and to provide feedback for the next LTS release, scheduled for April 2020. Go here to download  link:/download/nb110/nb110.html[Apache NetBeans 11.0], the current LTS release.
+
+== Release Drivers
+
+=== Java
+
+The highlights of enhancements in the Java area are focused on support for JDK 14.
+
+
