More additions around Java

--- a/netbeans.apache.org/src/content/download/nb113/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb113/index.asciidoc
@@ -41,4 +41,44 @@ TIP: The LTS release of the Apache NetBeans 11 cycle is Apache NetBeans 11.0. Th
 
 The highlights of enhancements in the Java area are focused on support for JDK 14.
 
+- link:https://openjdk.java.net/jeps/359[JEP 359]: Records (Preview Feature) 
+- link:https://openjdk.java.net/jeps/359[JEP 305]: Pattern Matching for instanceof (Preview Feature) 
+
+TIP: link:https://openjdk.java.net/jeps/12[JEP 12] provides for a preview language or VM feature, which "is a new feature of the Java SE Platform that is fully specified, fully implemented, and yet impermanent. It is available in a JDK feature release to provoke developer feedback based on real world use; this may lead to it becoming permanent in a future Java SE Platform".
+
+Preview features can only be used if the Java compiler's `--enable-preview` flag is set, as shown below for Maven. 
+
+[source,xml]
+----
+<build>
+   <plugins>
+      <plugin>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.0</version>
+          <configuration>
+              <compilerArgs>
+                    <arg>--enable-preview</arg>
+              </compilerArgs>
+         </configuration>
+     </plugin>
+  </plugins>
+</build>
+----
+
+An example to add `--enable-preview` in Gradle:
+
+[source,groovy]
+----
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
+
+run.jvmArgs(['--enable-preview'])
+----
+
+Other enhancements in the Java area.
+
+- link:https://openjdk.java.net/jeps/330[JEP 330]: Launch Single-File Source-Code Programs
+ 
+
 
