--- a/netbeans.apache.org/src/content/download/nb113/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb113/index.asciidoc
@@ -42,6 +42,12 @@ TIP: The LTS release of the Apache NetBeans 11 cycle is Apache NetBeans 11.0. Th
 The highlights of enhancements in the Java area are focused on support for JDK 14.
 
 - link:https://openjdk.java.net/jeps/359[JEP 359]: Records (Preview Feature) 
+
+[.feature]
+--
+image::record-keyword.png[role="left", link="record-keyword.png"]
+--  
+
 - link:https://openjdk.java.net/jeps/359[JEP 305]: Pattern Matching for instanceof (Preview Feature) 
 
 TIP: link:https://openjdk.java.net/jeps/12[JEP 12] provides for a preview language or VM feature, which "is a new feature of the Java SE Platform that is fully specified, fully implemented, and yet impermanent. It is available in a JDK feature release to provoke developer feedback based on real world use; this may lead to it becoming permanent in a future Java SE Platform".
