adding details for records

--- a/netbeans.apache.org/src/content/download/nb113/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb113/index.asciidoc
@@ -41,8 +41,7 @@ TIP: The LTS release of the Apache NetBeans 11 cycle is Apache NetBeans 11.0. Th
 
 The highlights of enhancements in the Java area are focused on support for JDK 14.
 
-- link:https://openjdk.java.net/jeps/359[JEP 359]: Records (Preview Feature) 
-
+- link:https://openjdk.java.net/jeps/359[JEP 359]: Records (Preview Feature) -- syntax coloring for the new "record" keyword; Navigator shows equals, hashCode, toString, etc; and formatting support for records.
 [.feature]
 --
 image::record-keyword.png[role="left", link="record-keyword.png"]
