--- a/netbeans.apache.org/src/content/download/nb113/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb113/index.asciidoc
@@ -47,7 +47,12 @@ The highlights of enhancements in the Java area are focused on support for JDK 1
 image::record-keyword.png[role="left", link="record-keyword.png"]
 --  
 
+
 - link:https://openjdk.java.net/jeps/359[JEP 305]: Pattern Matching for instanceof (Preview Feature) 
+[.feature]
+--
+image::ezgif.com-video-to-gif.gif[role="left", link="ezgif.com-video-to-gif.gif"]
+--  
 
 TIP: link:https://openjdk.java.net/jeps/12[JEP 12] provides for a preview language or VM feature, which "is a new feature of the Java SE Platform that is fully specified, fully implemented, and yet impermanent. It is available in a JDK feature release to provoke developer feedback based on real world use; this may lead to it becoming permanent in a future Java SE Platform".
 
