More content in Java area

--- a/netbeans.apache.org/src/content/download/nb113/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb113/index.asciidoc
@@ -42,18 +42,18 @@ TIP: The LTS release of the Apache NetBeans 11 cycle is Apache NetBeans 11.0. Th
 The highlights of enhancements in the Java area are focused on support for JDK 14.
 
 - link:https://openjdk.java.net/jeps/359[JEP 359]: Records (Preview Feature) -- syntax coloring for the new "record" keyword; Navigator shows equals, hashCode, toString, etc; and formatting support for records.
+
 [.feature]
 --
 image::record-keyword.png[role="left", link="record-keyword.png"]
---  
+-- 
 
+- link:https://openjdk.java.net/jeps/305[JEP 305]: Pattern Matching for instanceof (Preview Feature) 
 
-- link:https://openjdk.java.net/jeps/359[JEP 305]: Pattern Matching for instanceof (Preview Feature) 
 [.feature]
 --
 image::ezgif.com-video-to-gif.gif[role="left", link="ezgif.com-video-to-gif.gif"]
 --  
-
 
 TIP: link:https://openjdk.java.net/jeps/12[JEP 12] provides for a preview language or VM feature, which "is a new feature of the Java SE Platform that is fully specified, fully implemented, and yet impermanent. It is available in a JDK feature release to provoke developer feedback based on real world use; this may lead to it becoming permanent in a future Java SE Platform".
 
@@ -89,7 +89,7 @@ run.jvmArgs(['--enable-preview'])
 
 Other enhancements in the Java area.
 
-- link:https://openjdk.java.net/jeps/330[JEP 330]: Launch Single-File Source-Code Programs
+- link:https://openjdk.java.net/jeps/330[JEP 330]: Launch Single-File Source-Code Programs -- single Java source files can be created, outside of projects, in the Favorites window, and they can be run and debugged, if NetBeans is running on JDK 11 or later.
  
 
 
